Replace deprecated methods, fix warnings and use Mockito